--- a/NB3_DL_BERT(EDA).ipynb
+++ b/NB3_DL_BERT(EDA).ipynb
@@ -921,6 +921,19 @@
         "colab": {}
       },
       "source": [
+        "# TESTING THE COMMIT"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Umk3p59Uba2g",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         ""
       ],
       "execution_count": 0,
